[FIX] improve light mode contrast and add more PINK

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,11 +7,11 @@
 }
 
 .dark {
-  @apply [--accent-color:#e969ee] [--transparent-color:black];
+  @apply [--accent-color-lighter:#461447] [--accent-color:#e969ee] [--transparent-color:black];
 }
 
 .light {
-  @apply [--accent-color:#f384f7] [--transparent-color:white];
+  @apply [--accent-color-lighter:#f7d1f8] [--accent-color:#f384f7] [--transparent-color:white];
 }
 
 ::-moz-selection {
@@ -43,7 +43,8 @@
   @apply [--project-color:rgba(233,233,233,0.3)] [--projects-after:rgba(233,233,233,0.6)] [--projects-before:rgba(233,233,233,0.1)] [--projects-bg:rgba(233,233,233,0.3)] dark:[--project-bg:rgba(255,255,255,0.1)] dark:[--project-color:rgba(23,23,23,0.9)] dark:[--projects-after:rgba(255,255,255,0.4)] dark:[--projects-before:rgba(255,255,255,0.1)] dark:[--projects-bg:rgb(23,23,23)];
 }
 
-.projects:hover > .project::after {
+.projects:hover > .project::after,
+.projects:hover > .project::before {
   opacity: 1;
 }
 
@@ -71,11 +72,11 @@
 
 .project::before {
   background: radial-gradient(
-    800px circle at var(--mouse-x) var(--mouse-y),
-    var(--projects-before),
+    600px circle at var(--mouse-x) var(--mouse-y),
+    var(--accent-color-lighter),
     transparent 40%
   );
-  z-index: 3;
+  z-index: 10;
 }
 
 .project > .project-content {
@@ -86,7 +87,7 @@
   flex-grow: 1;
   margin: 1px;
   padding: 10px;
-  z-index: 3;
+  z-index: 20;
 }
 
 /* ---- */
